animations and ui ux

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="text-area">
           <div class="container">
             <div class="row">
-              <div class="col-md-4 about-image-col">
+              <div class="col-md-4 about-image-col add-animation">
                 <img src="assets/img-optimized/BF1_6731.jpg" alt="Относно нас" class="about-img">
                 <div class="about-overlay add-animation animation-1">
                   <h5 class="add-animation animation-2">Относно</h5>
@@ -213,10 +213,10 @@
                 </div>
               </div>
 
+              <!-- Vertical separator line -->
+              <div class="vertical-separator"></div>
 
-
-
-              <div class="col-md-7 col-md-offset-1">
+              <div class="col-md-7 col-md-offset-1 add-animation">
                 <p class="add-animation animation-1">Отворихме нашето семейно дизанерско студио преди повече от 20
                   години с идеята да преобразим проекти с широка разновидност. С дългогодишен опит в творчеството и усет
                   към класическия и модерния дизайн, студио ни работи както с клиенти, желаещи да внесат уют в своя дом,
@@ -3284,6 +3284,7 @@
       onScroll();
     })();
   </script>
+
 
 </body>
 
