--- a/index.html
+++ b/index.html
@@ -16,16 +16,44 @@
     content="Форма - студио за интериорен дизайн и архитектура във Варна. Повече от 20 години опит в жилищни, бизнес и обществени пространства. Свържете се с нас за консултация.">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
+  <!-- Performance optimizations -->
+  <meta name="format-detection" content="telephone=no">
+  <meta name="theme-color" content="#ffffff">
+
   <link href="assets/css/bootstrap.css" rel="stylesheet" />
   <link href="assets/css/rubick.css" rel="stylesheet" />
 
   <!--     Fonts and icons     -->
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
+    media="print" onload="this.media='all'">
+  <noscript>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  </noscript>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'
+    media="print" onload="this.media='all'">
+  <noscript>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
+  </noscript>
   <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
   <link href="assets/css/fonts/Rubik-Fonts.css" rel="stylesheet" />
+  <link href="assets/css/lazy-load.css" rel="stylesheet" />
 
+  <!-- Preload critical resources -->
+  <link rel="preload" href="assets/js/lazy-load.js" as="script">
+  <link rel="preload" href="assets/img/forma_grayL.png" as="image">
+  <link rel="preload" href="assets/img-optimized/Interior4-14-BF1_8957-HDR.jpg" as="image">
+  <link rel="preload" href="assets/css/rubick.css" as="style">
+  <link rel="preload" href="assets/js/jquery-1.11.2.min.js" as="script">
+  <link rel="preload" href="assets/js/rubick.js" as="script">
 
+  <!-- DNS prefetch for external resources -->
+  <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//www.google.com">
+
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://maxcdn.bootstrapcdn.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 
 </head>
 
@@ -114,14 +142,13 @@
         <div class="bg-slider">
           <div class="bg-slide" style="background-image:url('assets/img-optimized/Interior4-14-BF1_8957-HDR.jpg');">
           </div>
-          <div class="bg-slide"
-            style="background-image:url('assets/img/Интериор_къща_Долна_трака_2/Dnevna_1_005.jpg');"></div>
-          <div class="bg-slide" style="background-image:url('assets/img//Banovo/Banovo/Detska_bania_013.jpg');"></div>
-          <div class="bg-slide" style="background-image:url('assets/img/house4/elenovo1.jpg');"></div>
-          <div class="bg-slide" style="background-image:url('assets/img/Офис_Елмарк/Komferentna_zala_006.jpg');"></div>
-          <div class="bg-slide" style="background-image:url('assets/img/house2/twin15.jpg');"></div>
-          <div class="bg-slide" style="background-image:url('assets/img/Частни/къщи/Светльо/V_2_001.jpg');"></div>
-          <div class="bg-slide" style="background-image:url('assets/img/Интериор_къща_Горна_трака/Et_3_005.jpg');">
+          <div class="bg-slide lazy-bg" data-bg="assets/img/Интериор_къща_Долна_трака_2/Dnevna_1_005.jpg"></div>
+          <div class="bg-slide lazy-bg" data-bg="assets/img/Banovo/Banovo/Detska_bania_013.jpg"></div>
+          <div class="bg-slide lazy-bg" data-bg="assets/img/house4/elenovo1.jpg"></div>
+          <div class="bg-slide lazy-bg" data-bg="assets/img/Офис_Елмарк/Komferentna_zala_006.jpg"></div>
+          <div class="bg-slide lazy-bg" data-bg="assets/img/house2/twin15.jpg"></div>
+          <div class="bg-slide lazy-bg" data-bg="assets/img/Частни/къщи/Светльо/V_2_001.jpg"></div>
+          <div class="bg-slide lazy-bg" data-bg="assets/img/Интериор_къща_Горна_трака/Et_3_005.jpg">
           </div>
 
         </div>
@@ -266,7 +293,9 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="project add-animation animation-2">
-              <img src="assets/img/bedroom.jpg" />
+              <img data-src="assets/img/bedroom.jpg"
+                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3C/svg%3E"
+                class="lazy" alt="Bedroom" />
               <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)"
                 data-target="project_2">
                 <div class="content">
@@ -302,7 +331,9 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="project add-animation animation-2">
-              <img src="assets/img/Интериор_къща_Долна_трака_2/Dnevna_1_005.jpg">
+              <img data-src="assets/img/Интериор_къща_Долна_трака_2/Dnevna_1_005.jpg"
+                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3C/svg%3E"
+                class="lazy" alt="Interior Design">
               <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)"
                 data-target="project_5">
                 <div class="content">
@@ -327,7 +358,9 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="project add-animation animation-1">
-              <img src="assets/img/Частни/къщи/Anatoli/Dnevna_006.jpg">
+              <img data-src="assets/img/Частни/къщи/Anatoli/Dnevna_006.jpg"
+                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3C/svg%3E"
+                class="lazy" alt="House Interior">
               <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)"
                 data-target="project_13">
                 <div class="content">
@@ -339,7 +372,9 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="project add-animation animation-2">
-              <img src="assets/img/Ap_2_Париж/spalnia_101.jpg">
+              <img data-src="assets/img/Ap_2_Париж/spalnia_101.jpg"
+                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3C/svg%3E"
+                class="lazy" alt="Apartment Interior">
               <a class="over-area color-1" href="javascript:void(0)" onClick="rubik.showModal(this)"
                 data-target="project_14">
                 <div class="content">
@@ -3308,22 +3343,27 @@
     })();
   </script>
 
+  <!-- Lazy loading script -->
+  <script src="assets/js/lazy-load.js"></script>
+
+  <!-- Performance monitoring (only in development) -->
+  <script src="assets/js/performance-monitor.js"></script>
 
 </body>
 
 <!--   core js files    -->
-<script src="assets/js/jquery-1.11.2.min.js" type="text/javascript"></script>
+<script src="assets/js/jquery-1.11.2.min.js" type="text/javascript" defer></script>
 
-<script src="assets/js/bootstrap.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.js" type="text/javascript" defer></script>
 
 <!--   file for adding vertical points where we activate the elements animation   -->
-<script type="text/javascript" src="assets/js/jquery.waypoints.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery.waypoints.min.js" defer></script>
 
 <!--  js library for devices recognition -->
-<script type="text/javascript" src="assets/js/modernizr.js"></script>
+<script type="text/javascript" src="assets/js/modernizr.js" defer></script>
 
 <!--   file where we handle all the script from the Rubik page   -->
-<script type="text/javascript" src="assets/js/rubick.js"></script>
+<script type="text/javascript" src="assets/js/rubick.js" defer></script>
 
 <!--  script for google maps   -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
